# dpi.RAG

./: main.py  pyproject.toml
data/PyPDF2/: kv_store_doc_status.json  mcs2025-rare-earths.md
data/docling/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  mcs2025-rare-earths.md  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
data/llm-ocr/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  mcs2025-rare-earths.md  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
data/marker/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  mcs2025-rare-earths.md  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
data/pymupdf4llm/: mcs2025-rare-earths.md
doc/docling/: docling.txt
doc/marker/: marker.txt
src/: lightrag_ollama_docling.qmd  parse_pdf.qmd
