[project]
name = "dpi-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "docling>=2.30.0",
    "ipykernel>=6.29.5",
    "lightrag-hku>=1.3.2",
    "nest-asyncio>=1.6.0",
    "pip>=25.0.1",
    "pipmaster>=0.5.4",
    "pyprojroot>=0.3.0",
    "tiktoken>=0.9.0",
]
